Updated the checklist. More to come on Imbalanced data, Imputing and Sampling.

--- a/EDA_FE_Flight_Price_Prediction.ipynb
+++ b/EDA_FE_Flight_Price_Prediction.ipynb
@@ -27,10 +27,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "C:\\Users\\fredr\\AppData\\Local\\Temp\\ipykernel_18192\\1274643492.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  train_df = pd.read_excel(\"Flight Prediction\\Data_Train.xlsx\")\n"
+      "<>:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "C:\\Users\\fredr\\AppData\\Local\\Temp\\ipykernel_25400\\4019667698.py:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "  train_df = pd.read_excel(\"Datasets\\Flight_Prediction\\Data_Train.xlsx\")\n"
      ]
     },
     {
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "train_df = pd.read_excel(\"Flight Prediction\\Data_Train.xlsx\")\n",
+    "train_df = pd.read_excel(\"Datasets\\Flight_Prediction\\Data_Train.xlsx\")\n",
     "train_df.head()"
    ]
   },
@@ -178,10 +178,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "C:\\Users\\fredr\\AppData\\Local\\Temp\\ipykernel_18192\\1352633903.py:1: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "  test_df = pd.read_excel(\"Flight Prediction\\Test_set.xlsx\")\n"
+      "<>:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "C:\\Users\\fredr\\AppData\\Local\\Temp\\ipykernel_25400\\3813419253.py:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "  test_df = pd.read_excel(\"Datasets\\Flight_Prediction\\Test_set.xlsx\")\n"
      ]
     },
     {
@@ -309,7 +309,7 @@
     }
    ],
    "source": [
-    "test_df = pd.read_excel(\"Flight Prediction\\Test_set.xlsx\")\n",
+    "test_df = pd.read_excel(\"Datasets\\Flight_Prediction\\Test_set.xlsx\")\n",
     "test_df.head()"
    ]
   },
@@ -2367,30 +2367,6 @@
    "source": [
     "final_df[\"Airline_IndiGo\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de06c6ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ecf1b2e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd436ff4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
