--- a/EDA_FE_Zomato.ipynb
+++ b/EDA_FE_Zomato.ipynb
@@ -1011,9 +1011,9 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x1579e0eb380>,\n",
-       "  <matplotlib.patches.Wedge at 0x1579ebb6c10>,\n",
-       "  <matplotlib.patches.Wedge at 0x1579ebb6fd0>],\n",
+       "([<matplotlib.patches.Wedge at 0x190743bf380>,\n",
+       "  <matplotlib.patches.Wedge at 0x19074d8ac10>,\n",
+       "  <matplotlib.patches.Wedge at 0x19074d8afd0>],\n",
        " [Text(-1.082974277862112, 0.1927867046480056, 'India'),\n",
        "  Text(1.0772816964394372, -0.22240536530526556, 'United States'),\n",
        "  Text(1.0995865232164619, -0.030157552300104404, 'United Kingdom')],\n",
@@ -1868,11 +1868,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x1579ee3d450>,\n",
-       "  <matplotlib.patches.Wedge at 0x1579ee3d810>,\n",
-       "  <matplotlib.patches.Wedge at 0x1579ee3dbd0>,\n",
-       "  <matplotlib.patches.Wedge at 0x1579ee3df90>,\n",
-       "  <matplotlib.patches.Wedge at 0x1579ee3e350>],\n",
+       "([<matplotlib.patches.Wedge at 0x1907500d450>,\n",
+       "  <matplotlib.patches.Wedge at 0x1907500d810>,\n",
+       "  <matplotlib.patches.Wedge at 0x1907500dbd0>,\n",
+       "  <matplotlib.patches.Wedge at 0x1907500df90>,\n",
+       "  <matplotlib.patches.Wedge at 0x1907500e350>],\n",
        " [Text(-0.6145353730323401, 0.9123301350344637, 'New Delhi'),\n",
        "  Text(0.06236774886414425, -1.0982305149200777, 'Gurgaon'),\n",
        "  Text(0.878904221413572, -0.6614585169014024, 'Noida'),\n",
